slick visibility glitch fix

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -842,9 +842,9 @@ body {
   background-color: transparent;
   position: relative!important;
   left: 40px !important;
-  top: 17px !important;
+  top: 16px !important;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .navbar-button {
